--- a/AfterSalesPoC/views/template/nav_part2.jade
+++ b/AfterSalesPoC/views/template/nav_part2.jade
@@ -7,7 +7,7 @@
 	// ie: clicking <div class="nav">HOME</div> will show panel #homePanel
 	// this code is in layout.jade
 	//.nav#homeLink HOME
-	.nav#newBatchLink(style="font-weight: 300;")  NEW BATCH
+	.nav#newPartLink(style="font-weight: 300;")  NEW PART
 	.nav#dashboardLink(style="font-weight: 300;") DASHBOARD
 	
 #whoAmI
