--- a/AfterSalesPoC/Hyperledger/app/views/template/nav_part2.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/template/nav_part2.jade
@@ -1,6 +1,6 @@
 #logo
 	i.icon.ion-ios-infinite-outline
-	span  VEHICLE TRACKER
+	span  AfterSales Manager
 
 #linkWraps
 	// there is JS code that will show the corresponding panel to the clicked navigation div.
