--- a/AfterSalesPoC/Hyperledger/app/views/template/layout.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/template/layout.jade
@@ -119,7 +119,7 @@ html
 				#notificationPanel
 					span.fa.fa-check#noticeIcon
 					#noticeText
-						p(class="hint") Your batch has been created. 
+						p(class="hint") Your part has been created. 
 					button(type="button")#closeNotification OK
 				
 				#errorNotificationPanel
