--- a/AfterSalesPoC/Hyperledger/app/views/panel_dashboard.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_dashboard.jade
@@ -1,5 +1,5 @@
 #dashboardPanel(hidden).panel
-	h1 Batch Tracker
+	h1 Part Tracker
 	hr
 
 	#dashboardModal.modalDialog(style="margin-top: 200px")
@@ -9,7 +9,7 @@
 					hr
 				.modal-content
 					form#dashboardFilter
-						input#dashboard_batchId.dashboard-filter(type="text" name="batchId" placeholder="Batch Id")
+						input#dashboard_batchId.dashboard-filter(type="text" name="partId" placeholder="Batch Id")
 						br
 						br
 						a.filter-button(href="#close" title="Close" ) Close
@@ -25,7 +25,7 @@
 			table#dashboardTable.tablesorter(style="width:30%;float:left")
 				thead
 					tr 
-						th BATCH ID
+						th PART ID
 				tbody#dashboardBody
 				tr
 					td
