added update screen

--- a/AfterSalesPoC/Hyperledger/app/views/part2.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/part2.jade
@@ -31,6 +31,9 @@ block content
 		
 		// --------------- Dashboard View
 		include ./panel_dashboard.jade
+		
+		// --------------- updatePart View
+		include ./panel_updatePart.jade
 
 		
 block footer
