--- a/AfterSalesPoC/Hyperledger/app/views/template/nav_part2.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/template/nav_part2.jade
@@ -8,6 +8,7 @@
 	// this code is in layout.jade
 	//.nav#homeLink HOME
 	.nav#newPartLink(style="font-weight: 300;")  NEW PART
+	.nav#updatePartLink(style="font-weight: 300;")  UPDATE PART
 	.nav#dashboardLink(style="font-weight: 300;") DASHBOARD
 	
 #whoAmI
