--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -1,5 +1,5 @@
 #updatePartPanel(hidden).panel
-	h1 Enter Part Details
+	h1 Enter Part Details to Update
 	hr
 
 	#innerWrap
@@ -7,6 +7,12 @@
 		form(action="/newPart" method="POST")#updatePartform
 			legend 
 				input(type="text" name="PartId" placeholder="Part Id")
+			legend 
+				input(type="text" name="DateOFDelivery" placeholder="Date Of Delivery" )#de
+			legend 
+				input(type="text" name="VehicleId" placeholder="Vehicle Id" )#cs
+			legend 
+				input(type="text" name="DateOFInstallation" placeholder="Date Of Installation" )#cs
 			legend
 				button(type="button" style="margin:10px 10px 5px 10px" )#update
 					span.fa.fa-plus &nbsp;&nbsp;
