--- a/AfterSalesPoC/Hyperledger/app/views/template/layout.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/template/layout.jade
@@ -45,7 +45,7 @@ html
 				function showPanel(show){
 					console.log('show', show);
 					if(show == '' || show == 'new batch' || show == 'newbatch') show = 'newBatch';		//default
-					if(bag.session.user_role && bag.session.user_role.toUpperCase() === "certifier".toUpperCase()) {
+					if(bag.session.user_role && bag.session.user_role.toUpperCase() === "dealer".toUpperCase()) {
 						show = 'dashboard';
 					}
 					window.history.pushState({},'', show);					//put it in url so we can f5
