changed UI for update part

--- a/AfterSalesPoC/Hyperledger/app/views/panel_dashboard.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_dashboard.jade
@@ -5,11 +5,11 @@
 	#dashboardModal.modalDialog(style="margin-top: 200px")
 			div
 				.modal-header
-					h5 Filter Transactions
+					h5 Filter Parts
 					hr
 				.modal-content
 					form#dashboardFilter
-						input#dashboard_batchId.dashboard-filter(type="text" name="partId" placeholder="Batch Id")
+						input#dashboard_partId.dashboard-filter(type="text" name="partId" placeholder="Part Id")
 						br
 						br
 						a.filter-button(href="#close" title="Close" ) Close
@@ -19,7 +19,7 @@
 		#openTrades
 
 			br
-			a.filter-button(href="#dashboardModal") Filter Transactions
+			a.filter-button(href="#dashboardModal") Filter Parts
 			br
 			br
 			table#dashboardTable.tablesorter(style="width:30%;float:left")
