--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -8,11 +8,11 @@
 			legend 
 				input(type="text" name="PartId" placeholder="Part Id")
 			legend 
-				input(type="text" name="DateOFDelivery" placeholder="Date Of Delivery" )#de
+				input(type="text" name="DateOfDelivery" placeholder="Date Of Delivery" )#de
 			legend 
 				input(type="text" name="VehicleId" placeholder="Vehicle Id" )#cs
 			legend 
-				input(type="text" name="DateOFInstallation" placeholder="Date Of Installation" )#cs
+				input(type="text" name="DateOfInstallation" placeholder="Date Of Installation" )#cs
 			legend
 				button(type="button" style="margin:10px 10px 5px 10px" )#update
 					span.fa.fa-plus &nbsp;&nbsp;
