--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -4,7 +4,7 @@
 
 	#innerWrap
 		
-		form(action="/newPart" method="POST")#updatePartform
+		form(action="/updatePart" method="POST")#updatePartform
 			legend 
 				input(type="text" name="PartId" placeholder="Part Id")
 			legend 
