--- a/AfterSalesPoC/Hyperledger/app/views/panel_createPart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_createPart.jade
@@ -6,11 +6,11 @@
 		
 		form(action="/newPart" method="POST")#newPartform
 			legend 
-				input(type="text" name="PartId" placeholder="Part Id")
+				Part Id: input(type="text" name="PartId" placeholder="Part Id")
 			legend 
-				input(type="text" name="ProductCode" placeholder="Product Code")
+				Product Code: input(type="text" name="ProductCode" placeholder="Product Code")
 			legend 
-				input(type="date" name="DateOfManufacture" placeholder="Date of Manufacture")
+				Date Of Manufacture: input(type="date" name="DateOfManufacture" placeholder="Date of Manufacture")
 			legend
 				button(type="button" style="margin:10px 10px 5px 10px" )#submit
 					span.fa.fa-plus &nbsp;&nbsp;
