--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -5,14 +5,18 @@
 	#innerWrap
 		
 		form(action="/updatePart" method="POST")#updatePartform
+			h5 PartId To Update:
 			legend 
-				PartId To Update: input(type="text" name="PartIdToUpdate" placeholder="Part Id")
+				input(type="text" name="PartIdToUpdate" placeholder="Part Id")
+			h5 Date Of Delivery:
 			legend 
-				Date Of Delivery: input(type="date" name="DateOfDelivery" placeholder="Date Of Delivery" )#deliveryDt
+				input(type="date" name="DateOfDelivery" placeholder="Date Of Delivery" )#deliveryDt
+			h5 Vehicle Id:
 			legend 
-				Vehicle Id: input(type="text" name="VehicleId" placeholder="Vehicle Id" )#vehicleId
+				input(type="text" name="VehicleId" placeholder="Vehicle Id" )#vehicleId
+			h5 Date Of Installation:
 			legend 
-				Date Of Installation: input(type="date" name="DateOfInstallation" placeholder="Date Of Installation" )#installationDt
+				input(type="date" name="DateOfInstallation" placeholder="Date Of Installation" )#installationDt
 			legend
 				button(type="button" style="margin:10px 10px 5px 10px" )#update
 					span.fa.fa-plus &nbsp;&nbsp;
