--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -5,20 +5,35 @@
 	#innerWrap
 		
 		form(action="/updatePart" method="POST")#updatePartform
-			legend 
-				h5 PartId To Update:
-				input(type="text" name="PartIdToUpdate" placeholder="Part Id")
-			legend 
-				h5 Date Of Delivery:
-				input(type="date" name="DateOfDelivery" placeholder="Date Of Delivery" )#deliveryDt
-			legend 
-				h5 Vehicle Id:
-				input(type="text" name="VehicleId" placeholder="Vehicle Id" )#vehicleId
-			legend 
-				h5 Date Of Installation:
-				input(type="date" name="DateOfInstallation" placeholder="Date Of Installation" )#installationDt
-			legend
-				button(type="button" style="margin:10px 10px 5px 10px" )#update
-					span.fa.fa-plus &nbsp;&nbsp;
-					span UPDATE
+			table#createPartTable.tablesorter(style="width:30%;float:left")
+				tr
+					td
+						h5 PartId To Update:
+					td
+						legend 	
+							input(type="text" name="PartIdToUpdate" placeholder="Part Id")
+				tr
+					td
+						h5 Date Of Delivery:
+					td
+						legend 	
+							input(type="date" name="DateOfDelivery" placeholder="Date Of Delivery" )#deliveryDt
+				tr
+					td
+						h5 Vehicle Id:
+					td
+						legend 
+							input(type="text" name="VehicleId" placeholder="Vehicle Id" )#vehicleId
+				tr
+					td
+						h5 Date Of Installation:
+					td
+						legend 
+							input(type="date" name="DateOfInstallation" placeholder="Date Of Installation" )#installationDt
+				tr
+					td#updatePartBut(colspan="2" style="font-size: 12px;")
+						legend
+							button(type="button" style="margin:10px 10px 5px 10px" )#update
+								span.fa.fa-plus &nbsp;&nbsp;
+								span UPDATE
 				
