--- a/AfterSalesPoC/Hyperledger/app/views/panel_createPart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_createPart.jade
@@ -5,7 +5,7 @@
 	#innerWrap
 		
 		form(action="/newPart" method="POST")#newPartform
-			table#createPartTable.tablesorter(style="width:30%;float:left")
+			table#createPartTable(style="width:50%;float:left")
 				tr
 					td
 						h5 Part Id:
