--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -5,7 +5,7 @@
 	#innerWrap
 		
 		form(action="/updatePart" method="POST")#updatePartform
-			table#createPartTable.tablesorter(style="width:30%;float:left")
+			table#createPartTable(style="width:50%;float:left")
 				tr
 					td
 						h5 PartId To Update:
