--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -17,19 +17,19 @@
 						h5 Date Of Delivery:
 					td
 						legend 	
-							input(type="date" name="DateOfDelivery" placeholder="Date Of Delivery" )#deliveryDt
+							input(type="date" name="DateOfDelivery" placeholder="Date Of Delivery" disabled)#deliveryDt
 				tr
 					td
 						h5 Vehicle Id:
 					td
 						legend 
-							input(type="text" name="VehicleId" placeholder="Vehicle Id" )#vehicleId
+							input(type="text" name="VehicleId" placeholder="Vehicle Id" disabled)#vehicleId
 				tr
 					td
 						h5 Date Of Installation:
 					td
 						legend 
-							input(type="date" name="DateOfInstallation" placeholder="Date Of Installation" )#installationDt
+							input(type="date" name="DateOfInstallation" placeholder="Date Of Installation" disabled)#installationDt
 				tr
 					td#updatePartBut(colspan="2" style="font-size: 12px;")
 						legend
