--- a/AfterSalesPoC/Hyperledger/app/public/css/main.css
+++ b/AfterSalesPoC/Hyperledger/app/public/css/main.css
@@ -395,7 +395,7 @@ label {
   width: 100%;
   border-top: 25px #5596E6 solid; }
 
-#notificationPanel {
+#notificationPanel, #updateNotificationPanel {
   display: none;
   width: 450px;
   position: absolute;
@@ -409,7 +409,7 @@ label {
   border-bottom-left-radius: 10px;
   text-align: center; }
 
-#noticeText, #errorNoticeText {
+#noticeText, #errorNoticeText, #updateNoticeText {
   margin-bottom: 20px;
   font-size: 13px;
   width: 100%;
