--- a/AfterSalesPoC/Hyperledger/app/views/template/layout.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/template/layout.jade
@@ -77,6 +77,7 @@ html
 					//	$(this).hide();
 					//});
 					$("#notificationPanel").animate({width:'toggle'});
+					$("#updateNotificationPanel").animate({width:'toggle'});
 				});
 
 				$("#closeErrorNotification").click(function(){
@@ -90,6 +91,7 @@ html
 					$(".panel").hide();
 					$("#homePanel").show();
 					$("#notificationPanel").animate({width:'toggle'});
+					$("#updateNotificationPanel").animate({width:'toggle'});
 				});
 				
 				//Page refresh show correct panel
@@ -127,6 +129,11 @@ html
 					h2#errorName Error
 					#errorNoticeText &nbsp;
 					button(type="button")#closeErrorNotification OK
+				#updateNotificationPanel
+					span.fa.fa-check#noticeIcon
+					#updateNoticeText
+						p(class="hint") Part has been updated successfully. 
+					button(type="button")#closeUpdateNotification OK
 				
 			#footerPanel
 				block footer
