--- a/AfterSalesPoC/Hyperledger/app/src/scss/3_global.scss
+++ b/AfterSalesPoC/Hyperledger/app/src/scss/3_global.scss
@@ -202,7 +202,7 @@
 	text-align: center;
 }
 
-#closeNotification, #closeErrorNotification{
+#closeNotification, #closeErrorNotification, #closeUpdateNotification{
 
 }
 
