--- a/AfterSalesPoC/Hyperledger/app/views/template/layout.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/template/layout.jade
@@ -77,6 +77,11 @@ html
 					//	$(this).hide();
 					//});
 					$("#notificationPanel").animate({width:'toggle'});
+				});
+				$("#closeUpdateNotification").click(function(){
+					//$("#updateNotificationPanel").animate({right:'-=450'}, 500, function(){
+					//	$(this).hide();
+					//});
 					$("#updateNotificationPanel").animate({width:'toggle'});
 				});
 
