updated for warranty

--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -31,6 +31,30 @@
 						legend 
 							input(type="date" name="DateOfInstallation" placeholder="Date Of Installation" disabled)#installationDt
 				tr
+					td
+						h5 Warranty Start Date:
+					td
+						legend 
+							input(type="date" name="WarrantyStartDate" placeholder="Warranty Start Date" disabled)#warrantyStartDt
+				tr
+					td
+						h5 Warranty End Date:
+					td
+						legend 
+							input(type="date" name="WarrantyEndDate" placeholder="Warranty End Date" disabled)#warrantyEndDt
+				tr
+					td
+						h5 Servicing Date:
+					td
+						legend 
+							input(type="date" name="ServicingDate" placeholder="Servicing Date" disabled)#servicingDt
+				tr
+					td
+						h5 Service Desc:
+					td
+						legend 
+							input(type="text" name="ServiceDesc" placeholder="Service Desc" disabled)#serviceDesc
+				tr
 					td#updatePartBut(colspan="2" style="font-size: 12px;")
 						legend
 							button(type="button" style="margin:10px 10px 5px 10px" )#update
