--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -12,48 +12,48 @@
 					td
 						legend 	
 							input(type="text" name="PartIdToUpdate" placeholder="Part Id")
-				tr
+				tr#deliveryDt
 					td
 						h5 Date Of Delivery:
 					td
 						legend 	
-							input(type="date" name="DateOfDelivery" placeholder="Date Of Delivery" disabled)#deliveryDt
-				tr
+							input(type="date" name="DateOfDelivery" placeholder="Date Of Delivery" disabled)
+				tr#vehicleId
 					td
 						h5 Vehicle Id:
 					td
 						legend 
-							input(type="text" name="VehicleId" placeholder="Vehicle Id" disabled)#vehicleId
-				tr
+							input(type="text" name="VehicleId" placeholder="Vehicle Id" disabled)
+				tr#installationDt
 					td
 						h5 Date Of Installation:
 					td
 						legend 
-							input(type="date" name="DateOfInstallation" placeholder="Date Of Installation" disabled)#installationDt
-				tr
+							input(type="date" name="DateOfInstallation" placeholder="Date Of Installation" disabled)
+				tr#warrantyStartDt
 					td
 						h5 Warranty Start Date:
 					td
 						legend 
-							input(type="date" name="WarrantyStartDate" placeholder="Warranty Start Date" disabled)#warrantyStartDt
-				tr
+							input(type="date" name="WarrantyStartDate" placeholder="Warranty Start Date" disabled)
+				tr#warrantyEndDt
 					td
 						h5 Warranty End Date:
 					td
 						legend 
-							input(type="date" name="WarrantyEndDate" placeholder="Warranty End Date" disabled)#warrantyEndDt
-				tr
+							input(type="date" name="WarrantyEndDate" placeholder="Warranty End Date" disabled)
+				tr#servicingDt
 					td
 						h5 Servicing Date:
 					td
 						legend 
-							input(type="date" name="ServicingDate" placeholder="Servicing Date" disabled)#servicingDt
-				tr
+							input(type="date" name="ServicingDate" placeholder="Servicing Date" disabled)
+				tr#serviceDesc
 					td
 						h5 Service Desc:
 					td
 						legend 
-							input(type="text" name="ServiceDesc" placeholder="Service Desc" disabled)#serviceDesc
+							input(type="text" name="ServiceDesc" placeholder="Service Desc" disabled)
 				tr
 					td#updatePartBut(colspan="2" style="font-size: 12px;")
 						legend
