--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -5,19 +5,17 @@
 	#innerWrap
 		
 		form(action="/updatePart" method="POST")#updatePartform
-			table#createPartTable(style="width:50%;float:left")
-				tr
-					td
-						h5 PartId To Update:
-					td
-						legend 	
-							input(type="text" name="PartIdToUpdate" placeholder="Part Id")
+			h5 PartId To Update:
+			legend 	
+				input(type="text" name="PartIdToUpdate" placeholder="Part Id")
+			table#updateDealerPartTable(style="width:50%;float:left")
 				tr#deliveryDt
 					td
 						h5 Date Of Delivery:
 					td
 						legend 	
 							input(type="date" name="DateOfDelivery" placeholder="Date Of Delivery" disabled)
+			table#updateSCPartTable(style="width:50%;float:left")
 				tr#vehicleId
 					td
 						h5 Vehicle Id:
@@ -54,10 +52,8 @@
 					td
 						legend 
 							input(type="text" name="ServiceDesc" placeholder="Service Desc" disabled)
-				tr
-					td#updatePartBut(colspan="2" style="font-size: 12px;")
-						legend
-							button(type="button" style="margin:10px 10px 5px 10px" )#update
-								span.fa.fa-plus &nbsp;&nbsp;
-								span UPDATE
+			legend
+				button(type="button" style="margin:10px 10px 5px 10px" )#update
+					span.fa.fa-plus &nbsp;&nbsp;
+					span UPDATE
 				
