--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -5,17 +5,19 @@
 	#innerWrap
 		
 		form(action="/updatePart" method="POST")#updatePartform
-			h5 PartId To Update:
-			legend 	
-				input(type="text" name="PartIdToUpdate" placeholder="Part Id")
-			table#updateDealerPartTable(style="width:50%;float:left")
+			table#updatePartTable(style="width:80%;float:left")
+				tr
+					td(style="width:50%")
+						h5 PartId To Update:
+					td
+						legend 	
+							input(type="text" name="PartIdToUpdate" placeholder="Part Id")
 				tr#deliveryDt
 					td
 						h5 Date Of Delivery:
 					td
 						legend 	
 							input(type="date" name="DateOfDelivery" placeholder="Date Of Delivery" disabled)
-			table#updateSCPartTable(style="width:50%;float:left")
 				tr#vehicleId
 					td
 						h5 Vehicle Id:
@@ -52,8 +54,10 @@
 					td
 						legend 
 							input(type="text" name="ServiceDesc" placeholder="Service Desc" disabled)
-			legend
-				button(type="button" style="margin:10px 10px 5px 10px" )#update
-					span.fa.fa-plus &nbsp;&nbsp;
-					span UPDATE
+				tr
+					td#updatePartBut(colspan="2" style="font-size: 12px;")
+						legend
+							button(type="button" style="margin:10px 10px 5px 10px" )#update
+								span.fa.fa-plus &nbsp;&nbsp;
+								span UPDATE
 				
