--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -13,43 +13,43 @@
 						legend 	
 							input(type="text" name="PartIdToUpdate" placeholder="Part Id")
 				tr#deliveryDt
-					td
+					td(style="width:50%")
 						h5 Date Of Delivery:
 					td
 						legend 	
 							input(type="date" name="DateOfDelivery" placeholder="Date Of Delivery" disabled)
 				tr#vehicleId
-					td
+					td(style="width:50%")
 						h5 Vehicle Id:
 					td
 						legend 
 							input(type="text" name="VehicleId" placeholder="Vehicle Id" disabled)
 				tr#installationDt
-					td
+					td(style="width:50%")
 						h5 Date Of Installation:
 					td
 						legend 
 							input(type="date" name="DateOfInstallation" placeholder="Date Of Installation" disabled)
 				tr#warrantyStartDt
-					td
+					td(style="width:50%")
 						h5 Warranty Start Date:
 					td
 						legend 
 							input(type="date" name="WarrantyStartDate" placeholder="Warranty Start Date" disabled)
 				tr#warrantyEndDt
-					td
+					td(style="width:50%")
 						h5 Warranty End Date:
 					td
 						legend 
 							input(type="date" name="WarrantyEndDate" placeholder="Warranty End Date" disabled)
 				tr#servicingDt
-					td
+					td(style="width:50%")
 						h5 Servicing Date:
 					td
 						legend 
 							input(type="date" name="ServicingDate" placeholder="Servicing Date" disabled)
 				tr#serviceDesc
-					td
+					td(style="width:50%")
 						h5 Service Desc:
 					td
 						legend 
