--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -6,7 +6,8 @@
 		
 		form(action="/updatePart" method="POST")#updatePartform
 			div
-				h4 Enter PartId To Update: input(type="text" name="PartIdToUpdate" placeholder="Part Id")
+				h4 Enter PartId To Update:
+				input(type="text" name="PartIdToUpdate" placeholder="Part Id")
 			table#updatePartTable(style="width:80%;float:left")
 				tr
 					td(style="width:50%")
