--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -7,14 +7,14 @@
 		form(action="/updatePart" method="POST")#updatePartform
 			table(style="width:80%;float:center")
 				tr
-					td
+					td(style="width:60%")
 						h4 Enter PartId To Update:
 					td
 						legend
 							input(type="text" name="PartIdToUpdate" placeholder="Part Id")
 			table#updatePartTable(style="width:80%;float:center")
 				tr#deliveryDt
-					td
+					td(style="width:60%")
 						h5 Date Of Delivery:
 					td
 						legend 	
