--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -6,7 +6,7 @@
 		
 		form(action="/updatePart" method="POST")#updatePartform
 			table#updatePartTable(style="width:80%;float:center")
-				tr
+				tr(style="display: block;")
 					td(style="width:60%")
 						h4 PartId To Update:
 					td
