--- a/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
+++ b/AfterSalesPoC/Hyperledger/app/views/panel_updatePart.jade
@@ -19,43 +19,43 @@
 						legend 	
 							input(type="date" name="DateOfDelivery" placeholder="Date Of Delivery")
 				tr#vehicleId
-					td
+					td(style="width:60%")
 						h5 Vehicle Id:
 					td
 						legend 
 							input(type="text" name="VehicleId" placeholder="Vehicle Id")
 				tr#installationDt
-					td
+					td(style="width:60%")
 						h5 Date Of Installation:
 					td
 						legend 
 							input(type="date" name="DateOfInstallation" placeholder="Date Of Installation")
 				tr#warrantyStartDt
-					td
+					td(style="width:60%")
 						h5 Warranty Start Date:
 					td
 						legend 
 							input(type="date" name="WarrantyStartDate" placeholder="Warranty Start Date")
 				tr#warrantyEndDt
-					td
+					td(style="width:60%")
 						h5 Warranty End Date:
 					td
 						legend 
 							input(type="date" name="WarrantyEndDate" placeholder="Warranty End Date")
 				tr#servicingDt
-					td
+					td(style="width:60%")
 						h5 Servicing Date:
 					td
 						legend 
 							input(type="date" name="ServicingDate" placeholder="Servicing Date")
 				tr#serviceDesc
-					td
+					td(style="width:60%")
 						h5 Service Desc:
 					td
 						legend 
 							input(type="text" name="ServiceDesc" placeholder="Service Desc")
 				tr
-					td#updatePartBut(colspan="2" style="font-size: 12px;")
+					td#updatePartBut(colspan="2" align="middle" style="font-size: 12px;")
 						legend
 							button(type="button" style="margin:10px 10px 5px 10px" )#update
 								span.fa.fa-plus &nbsp;&nbsp;
