--- a/Vehicle/app/views/template/navigation.jade
+++ b/Vehicle/app/views/template/navigation.jade
@@ -7,12 +7,8 @@
 	// ie: clicking <div class="nav">HOME</div> will show panel #homePanel
 	// this code is in layout.jade
 	//.nav#homeLink HOME
-	a.nav#vehicles(style="font-weight: 300;" href="vehicles")  Vehicles
-	a.nav#newVehicle(style="font-weight: 300;" href="newvehicle")  New Vehicle
-	a.nav#updateVehicle(style="font-weight: 300;" href="updatevehicle")  Update Vehicle
-	a.nav#newPartLink(style="font-weight: 300;" href="newpart")  New Part
-	a.nav#updatePartLink(style="font-weight: 300;" href="updatepart")  Update Part
-	a.nav#dashboardLink(style="font-weight: 300;" href="parts") Parts
+	a.nav#vehiclesnav(style="font-weight: 300;" href="vehicle")  Vehicles
+	a.nav#partsnav(style="font-weight: 300;" href="part")  Parts	
 	
 #whoAmI
 	span.fa.fa-user#userIcon
