--- a/Vehicle/app/views/vehicle.jade
+++ b/Vehicle/app/views/vehicle.jade
@@ -22,6 +22,9 @@ block content
 		
 		#blockdate(title="date of last block") loading...
 		
+		#innerButtons(style="text-align:right;color:#333")
+			p#createNewVehicle(style="cursor:pointer") Create New Vehicle
+			p#vehicleList(style="cursor:pointer;display:none;") Vehicle List
 		
 		// --------------- New Batch Panel
 		include ./panel_createVehicle.jade
