created transactions screen

--- a/Vehicle/app/views/panel_vehicleDashboard.jade
+++ b/Vehicle/app/views/panel_vehicleDashboard.jade
@@ -23,11 +23,11 @@
 			a.filter-button(href="#dashboardModal") Filter Vehicles
 			br
 			br
-			table#dashboardTable.tablesorter(style="width:30%;float:left")
+			table#dashboardTablevehicles.tablesorter(style="width:30%;float:left")
 				thead
 					tr 
-						th Vehicle Vin
-				tbody#dashboardBody
+						th Chassis Number
+				tbody#vehicledashboardBody
 				tr
 					td
 
@@ -35,4 +35,4 @@
 				thead
 					tr 
 						th#bDetHeader(colspan="2" style="font-size: 12px;")
-				tbody#batchDetailsBody
+				tbody#vehiclesbatchDetailsBody
