--- a/Vehicle/app/views/template/layout.jade
+++ b/Vehicle/app/views/template/layout.jade
@@ -21,6 +21,7 @@ html
 		link(type="text/css" rel="stylesheet" href="/css/main.min.css")
 		//link(type="text/css" rel="stylesheet" href="/css/blue/style.css")
 		script(src='/js/util/jquery-1.11.1.min.js')
+		script(src='/js/util/moment.js')
 		//script(src='/js/util/jquery-ui-1.11.4/jquery-ui.min.js')
 		script(src='/js/util/jquery.ui.touch-punch.min.js')
 		script(src='/js/util/jquery.tablesorter.min.js')
