CustomerVehicle Details view added

--- a/Vehicle/app/views/template/navigation.jade
+++ b/Vehicle/app/views/template/navigation.jade
@@ -9,7 +9,7 @@
 	//.nav#homeLink HOME
 	a.nav#vehiclesnav(style="font-weight: 300;" href="vehicle")  Vehicles
 	a.nav#partsnav(style="font-weight: 300;" href="part")  Parts	
-	
+	a.nav#customerVehicleLink(style="font-weight: 300;", href="customerVehicle") Customer Vehicle	
 #whoAmI
 	span.fa.fa-user#userIcon
 	span#userField(style="font-weight: 300;") LOGIN
