--- a/Vehicle/app/views/panel_updateVehicle.jade
+++ b/Vehicle/app/views/panel_updateVehicle.jade
@@ -40,7 +40,7 @@ tr
 	td
 		legend
 			select#selectedParts(style="float:left;text-align:left;")
-			div#upParts(style="float:left;text-align:left;margin-left:10px")
+			div#upParts(style="float:left;text-align:left;margin-left:6px;padding:5px;border:solid 1px #ccc;float:left;")
 tr
 	td
 		h5 Warranty Start Date:
@@ -64,7 +64,7 @@ tr
 		h5 Date of Delivery:
 	td
 		legend 
-			input(type="date" disabled name="upDateofDelivery" placeholder="Date of Delivery")
+			input(type="date" name="upDateofDelivery" placeholder="Date of Delivery")
 tr
 	td#createPartBut(colspan="2" style="font-size: 12px;")
 		legend
