updated service center user design

--- a/Vehicle/app/views/panel_vehicleDashboard.jade
+++ b/Vehicle/app/views/panel_vehicleDashboard.jade
@@ -39,6 +39,6 @@
 					tr 
 						th#vehicleDetHeader(colspan="2" style="font-size: 15px;text-align: left;font-weight: bold;") Vehicle Details
 				tbody#vehicleDetailsBody
-					// --------------- Dashboard View
+					// -------------- Dashboard View
 					include ./panel_updateVehicle.jade
 		
