updated service center user design

--- a/Vehicle/app/views/panel_dashboard.jade
+++ b/Vehicle/app/views/panel_dashboard.jade
@@ -17,7 +17,7 @@
 	div#contentTable					
 		div(style="text-align:center")
 			span#spinner2.fa.fa-circle-o-notch.fa-spin(style="font-size: 80px;color:#5596E6")					
-		#openTrades
+		#openTrades1
 
 			br
 			a.filter-button(href="#dashboardModal") Filter Parts
