--- a/Vehicle/app/views/panel_vehicleDashboard.jade
+++ b/Vehicle/app/views/panel_vehicleDashboard.jade
@@ -17,28 +17,24 @@
 	div#contentTable					
 		div(style="text-align:center")
 			span#spinner2.fa.fa-circle-o-notch.fa-spin(style="font-size: 80px;color:#5596E6")					
-		#openTrades			
-			table#dashboardTablevehicles.tablesorter(style="width:20%;float:left")
-				thead
-					tr 
-						th(style="font-size: 15px;text-align: left;font-weight: bold;") Chassis Number &nbsp;&nbsp;
-							a.filter-button(href="#dashboardModal") Filter 
-				tbody#vehicledashboardBody
-				tr
-					td
+		#openTrades
+		
+			div(style="margin-top:12px;width:20%;height:30px;font-size: 15px;text-align: left;font-weight: bold;color:#5596E6;border-bottom:1px #D4DCDC solid;") Chassis Number &nbsp;&nbsp;
+				a.filter-button(href="#dashboardModal") Filter
+			table#dashboardTablevehicles.tablesorter(style="width:20%;float:left;margin-top:0px;")						
+				tbody#vehicledashboardBody				
 
-			table#batchDetailsTable.tablesorter(style="width:64%;float:right")
+			table#batchDetailsTable.tablesorter(style="width:78%;margin-top: -35px;float:right")
 				thead
 					tr 
-						th(colspan="2" style="font-size: 12px;text-align: left;padding-left: 74px;")
+						th(colspan="2" style="font-size: 15px;height:15px;text-align: left;padding-left: 104px;font-weight: bold;")
 							div#bDetHeader(style="float:left;")
 							button(type="button" style="margin-left:20px;margin-top: -12px;" id="editVehicleDetails") Edit
 				tbody#vehiclesbatchDetailsBody
-			table#vehicleDetailsTable.tablesorter(style="width:64%;float:right;display:none;")
+			table#vehicleDetailsTable.tablesorter(style="width:78%;margin-top: -35px;float:right;display:none;")
 				thead
 					tr 
-						th#vehicleDetHeader(colspan="2" style="font-size: 15px;text-align: left;font-weight: bold;") Vehicle Details
+						th#vehicleDetHeader(colspan="2" style="font-size: 15px;text-align: left;height:23;padding-left: 104px;font-weight: bold;") Vehicle Details
 				tbody#vehicleDetailsBody
 					// -------------- Dashboard View
 					include ./panel_updateVehicle.jade
-		
