--- a/Vehicle/app/views/part2.jade
+++ b/Vehicle/app/views/part2.jade
@@ -3,7 +3,7 @@ extends ./template/layout.jade
 	
 // --------------- Header -------------- //
 block custom_header
-	script(src='/js/part2.js')
+	script(src='/js/vehicle.js')
 	script(src='/js/blockchain.js')
 	script(type='text/javascript').
 		$(document).ready(function(){
@@ -13,7 +13,7 @@ block custom_header
 		
 // --------------- Navigation Bar  -------------- //
 block navpanel
-	include ./template/nav_part2.jade
+	include ./template/navigation.jade
 	
 	
 // --------------- Main Stuff  -------------- //
