disabled part menus

--- a/Vehicle/app/views/panel_customerVehicleDetails.jade
+++ b/Vehicle/app/views/panel_customerVehicleDetails.jade
@@ -36,6 +36,21 @@ tr
 			input(type="text" disabled name="upLicensePlateNumber" placeholder="License Plate Number")
 tr
 	td
+		h5 Parts:
+	td
+		legend()			
+			div#upParts(style="float:left;text-align:left;margin-left:6px; padding:5px;color:#5596e6;") 
+
+
+tr
+	td
+		h5 Last Service Date:
+	td
+		legend 
+			input(type="date" disabled name="upLastServiceDate" placeholder="Last Service Date")
+
+tr
+	td
 		h5 Warranty Start Date:
 	td
 		legend 
