--- a/Vehicle/app/views/panel_updateVehicle.jade
+++ b/Vehicle/app/views/panel_updateVehicle.jade
@@ -34,7 +34,7 @@ tr
 	td
 		legend 
 			input(type="text" name="upLicensePlateNumber" placeholder="License Plate Number")
-tr
+tr#partsPanelTR(style="display:none;")
 	td
 		h5 Parts:
 	td
