disabled part menus

--- a/Vehicle/app/views/template/nav_part2.jade
+++ b/Vehicle/app/views/template/nav_part2.jade
@@ -7,9 +7,9 @@
 	// ie: clicking <div class="nav">HOME</div> will show panel #homePanel
 	// this code is in layout.jade
 	//.nav#homeLink HOME
-	.nav#newPartLink(style="font-weight: 300;")  NEW PART
-	.nav#updatePartLink(style="font-weight: 300;")  UPDATE PART
-	.nav#dashboardLink(style="font-weight: 300;") DASHBOARD
+	//- .nav#newPartLink(style="font-weight: 300;")  NEW PART
+	//- .nav#updatePartLink(style="font-weight: 300;")  UPDATE PART
+	//- .nav#dashboardLink(style="font-weight: 300;") DASHBOARD
 	
 #whoAmI
 	span.fa.fa-user#userIcon
