--- a/Vehicle/app/views/template/navigation.jade
+++ b/Vehicle/app/views/template/navigation.jade
@@ -7,7 +7,7 @@
 	// ie: clicking <div class="nav">HOME</div> will show panel #homePanel
 	// this code is in layout.jade
 	//.nav#homeLink HOME
-	a.nav#vehiclesnav(style="font-weight: 300;" href="vehicle")  Vehicle Dashboard
+	a.nav#vehiclesnav(style="font-weight: 300;" href="vehicle")  Vehicles
 	a.nav#createNewVehicle(style="cursor:pointer;text-decoration:underline;") New Vehicle
 	//- a.nav#partsnav(style="font-weight: 300;" href="part")  Parts Dashboard	
 	//- a.nav#newPartLink(style="font-weight: 300;text-decoration:underline;")  New Part
