Service History added for Customer role

--- a/Vehicle/app/views/panel_customerVehicleDetails.jade
+++ b/Vehicle/app/views/panel_customerVehicleDetails.jade
@@ -41,6 +41,12 @@ tr
 		legend()			
 			div#upParts(style="float:left;text-align:left;margin-left:6px; padding:5px;color:#5596e6;") 
 
+tr#serviceHistoryPanelTR(style="display:none;")
+	td
+		h5 Service History
+	td
+		legend 
+			div#upServiceHistory(style="height: 200px;overflow-y: scroll;width: 490px;border: 1px solid #ccc;")
 
 tr
 	td
