--- a/Vehicle/app/views/panel_updateVehicle.jade
+++ b/Vehicle/app/views/panel_updateVehicle.jade
@@ -60,7 +60,7 @@ tr#partsPanelTR(style="display:none;")
 						br
 						div#upPartsAddedBySC(style="width:350px;float:left;text-align:left;margin-left:-2px;padding:5px;border:solid 0px #ccc;float:left;")			
 
-tr
+tr#serviceHistoryPanelTR(style="display:none;")
 	td
 		h5 Service History
 	td
