--- a/Vehicle/app/views/panel_vehicleDashboard.jade
+++ b/Vehicle/app/views/panel_vehicleDashboard.jade
@@ -9,7 +9,7 @@
 					hr
 				.modal-content
 					form#dashboardFilter
-						input#dashboard_Vin.dashboard-filter(type="text" name="Vin" placeholder="Vin")
+						input#dashboard_Vin.dashboard-filter(type="text" name="Vin" placeholder="Chassis Number")
 						br
 						br
 						a.filter-button(href="#close" title="Close" ) Close
@@ -18,12 +18,14 @@
 		div(style="text-align:center")
 			span#spinner2.fa.fa-circle-o-notch.fa-spin(style="font-size: 80px;color:#5596E6")					
 		#openTrades
-			div#searchBar(style="margin-top:12px;width:20%;height:30px;font-size: 15px;text-align: left;font-weight: bold;color:#5596E6;border-bottom:0px #D4DCDC solid;")				
+			div#searchBar(style="display:block; margin-top:12px;width:20%;height:30px;font-size: 15px;text-align: left;font-weight: bold;color:#5596E6;border-bottom:0px #D4DCDC solid;")				
 				input#scChassisNumber(type="text" name="scChassisNumber" placeholder="Chassis Number")
-				
-			div#filterBar(style="display:none;margin-top:12px;width:20%;height:30px;font-size: 15px;text-align: left;font-weight: bold;color:#5596E6;border-bottom:1px #D4DCDC solid;") Chassis Number &nbsp;&nbsp;
+
+
+
+			div#filterBar(style="display:none;margin-top:20px;width:20%;height:30px;font-size: 15px;text-align: left;font-weight: bold;color:#5596E6;border-bottom:1px #D4DCDC solid;") Chassis Number &nbsp;&nbsp;
 				a.filter-button(href="#dashboardModal") Filter
-			table#dashboardTablevehicles.tablesorter(style="display:none;width:20%;float:left;margin-top:0px;")						
+			table#dashboardTablevehicles.tablesorter(style="display:none;width:20%;float:left;margin-top:10px; margin-left:10px;")						
 				tbody#vehicledashboardBody				
 
 			table#batchDetailsTable.tablesorter(style="width:78%;margin-top: -35px;float:right")
@@ -34,9 +36,9 @@
 							button(type="button" style="margin-left:20px;margin-top: -12px;" id="editVehicleDetails") View Vehicle Details
 				tbody#vehiclesbatchDetailsBody
 			table#vehicleDetailsTable.tablesorter(style="width:78%;margin-top: -35px;float:right;display:none;")
-				thead
-					tr 
-						th#vehicleDetHeader(colspan="2" style="font-size: 15px;text-align: left;height:23;padding-left: 104px;font-weight: bold;") Vehicle Details
+				//- thead
+				//- 	tr 
+				//- 		th#vehicleDetHeader(colspan="2" style="font-size: 15px;text-align: left;height:23;padding-left: 104px;font-weight: bold;") Vehicle Details
 				tbody#vehicleDetailsBody
 					// -------------- Dashboard View
 					include ./panel_updateVehicle.jade
